tests/cases/attributes/errors/attribute-repr-enum-own-payload.ari
@repr(C)
enum MaybeOwned {
  None,
  Some(own i64),
}

fn main() -> i64 {
  return 0;
}
